<resources>
    <string name="app_name">cadev1</string>
    <string name="app_titulo">C.A.D.E</string>
    <string name="app_iniciosesion">Inicio de sesión</string>
    <string name="app_usuario">Usuario</string>
    <string name="app_contrasenia">Contraseña</string>
    <string name="app_iniciar">Iniciar Sesión</string>
    <string name="app_sincuenta">¿No tienes cuenta?</string>
    <string name="app_olvidocontra">¿Olvidaste tu contraseña?</string>
    <string name="app_olvido">Acude a control escolar para solucionar el probema.</string>
    <string name="app_aviso">¡Aviso Importante!</string>
    <string name="app_aceptar">Aceptar</string>
    <string name="app_cancelar">Cancelar</string>
    <string name="app_tienesCuenta">¿Ya tienes cuenta?</string>
    <string name="app_nombre">Nombre</string>
    <string name="app_ape1">Apellido Paterno</string>
    <string name="app_regresarRegistarte">Registrarte</string>
    <string name="app_ape2">Apellido Materno</string>
    <string name="app_email">Email</string>
    <string name="app_telefono">Telefono</string>
    <string name="app_direccion">Dirección</string>
    <string name="app_fechaNacimiento">Fecha de nacimiento</string>
    <string name="app_bienvenido">Bienvenido</string>
    <string name="app_creauna">Crea una aquí</string>
    <string name="app_registrado">Alumno registrado con éxito</string>
    <string name="app_matricula">Matricula:</string>
</resources>