<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.registro"
    android:background="@color/white">

    <include layout="@layout/action_bar_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">
                
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_nombre"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_nombre"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_apellidos"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroApe1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_ape1"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_apellidos"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroApe2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_ape2"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/purple_500"
                    app:endIconTint="@color/purple_500"
                    app:endIconMode="password_toggle"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroContraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/app_contrasenia"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_baseline_phone_enabled_24"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/app_telefono"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_apellidos"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_direccion"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_500"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/purple_500"
                    app:startIconDrawable="@drawable/ic_fecha"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registroFechaDeNacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:clickable="false"
                        android:hint="@string/app_fechaNacimiento"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <Spinner
                    android:layout_marginTop="10dp"
                    android:id="@+id/registroCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_spinner"
                    android:theme="@android:style/Theme.Material.Light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_aceptar"
                    style="@style/button" />
                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_cancelar"
                    style="@style/button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_tienesCuenta"
                    style="@style/texto"/>
                <TextView
                    android:id="@+id/btnRegresarAIniciarSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_iniciar"
                    android:textStyle="bold"
                    style="@style/texto"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>