<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".views.login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blanco200" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="50dp"
                    android:layout_weight=".6"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_iniciosesion"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="@font/titulo"
                        android:textSize="25sp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="30dp"
                        app:startIconDrawable="@drawable/ic_usuario"
                        app:boxCornerRadiusTopStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/app_usuario"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="30dp"
                        app:startIconDrawable="@drawable/ic_password"
                        app:endIconMode="password_toggle"

                        app:boxCornerRadiusTopStart="30dp"
                        app:boxCornerRadiusTopEnd="30dp"
                        app:boxCornerRadiusBottomEnd="30dp"
                        app:boxCornerRadiusBottomStart="30dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/app_contrasenia"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/botoniniciar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_iniciar"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/purple_700"
                        app:cornerRadius="20dp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_sincuenta"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:layout_marginBottom="10dp" />
                        <TextView
                            android:id="@+id/btnregistro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_creauna"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_olvidocontra"
                            android:textColor="@color/white"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/olvidoContraseña"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Comunicate"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15sp"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>







</LinearLayout>